--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,11 +1,9 @@
-<%= form_for(@post) do |f| %>
-  <%= author_id_field(@post) %>
+<%= form_with(model: @post, local: true) do |f| %>
+  <%= author_id_field(f, @post) %>
   <br>
   <label>Post title:</label><br>
   <%= f.text_field :title %><br>
-
   <label>Post Description</label><br>
   <%= f.text_area :description %><br>
-
   <%= f.submit %>
 <% end %>
